Fix: set overflow hidden on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -13,4 +13,8 @@
     flex-direction: column;
     gap: 1rem;
   }
+
+  @include m.breakpoint-max('sm') {
+    overflow: hidden;
+  }
 }
